Tidy up some of these list callers